# ciu_agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  s003_organize_project.bat
.claude/: settings.json
ciu_agent/: __init__.py  main.py  replay_viewer.py
ciu_agent/config/: settings.py
ciu_agent/core/: __init__.py  action_executor.py  brush_controller.py  canvas_mapper.py  capture_engine.py  director.py  error_classifier.py  motion_planner.py  replay_buffer.py  state_classifier.py  step_executor.py  task_planner.py  tier1_analyzer.py  tier2_analyzer.py  zone_registry.py  zone_tracker.py
ciu_agent/models/: __init__.py  actions.py  events.py  task.py  zone.py
ciu_agent/platform/: __init__.py  interface.py  linux.py  macos.py  (+1 more)
docs/: ADAPTIVE_REPLANNING.md  AGENT_PHILOSOPHY.md  DEVELOPMENT_PATTERNS.md  DUAL_MODE_EXECUTION.md  INDEX.md  PERMISSIONS_MANAGEMENT.md  TOKEN_BUDGET.md  agents.md  architecture.md  conductor.md  features.md  permissions.md  phases.md  skills.md  taskboard.json  teams.md  token_log.md  token_ops.md  token_reviews.md  token_savings.md  token_violations.md  token_warden_agent.md
tests/: test_action_executor.py  test_brush_controller.py  test_canvas_mapper.py  test_capture_engine.py  test_director.py  test_error_classifier.py  test_integration.py  test_models.py  test_motion_planner.py  test_platform.py  test_replay_buffer.py  test_settings.py  test_state_classifier.py  test_step_executor.py  test_task_planner.py  test_tier1_analyzer.py  test_tier2_analyzer.py  test_zone_registry.py  test_zone_tracker.py
(+2 files in other folders)
